Implement sync status endpoint (#1656)
